[gd_scene load_steps=10 format=3 uid="uid://f7u5iwklree1"]

[ext_resource type="TileSet" uid="uid://bos4g3da0a8o0" path="res://Assets/menu.tres" id="1_8otmk"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ybidx"]
[ext_resource type="PackedScene" uid="uid://iwdiub4ivghp" path="res://Scenes/Items/button.tscn" id="2_yo36c"]
[ext_resource type="PackedScene" uid="uid://b4cmwc771bsik" path="res://Scenes/Character/player.tscn" id="3_f42q3"]
[ext_resource type="Texture2D" uid="uid://dieeidp7mvsfn" path="res://Assets/flag.png" id="5_dyqpo"]
[ext_resource type="PackedScene" uid="uid://dcmcu8uvwnv23" path="res://Scenes/Items/torch.tscn" id="6_4kadi"]
[ext_resource type="PackedScene" uid="uid://dbytjk6mbn5k3" path="res://Scenes/Items/text_box.tscn" id="7_5jsix"]
[ext_resource type="Texture2D" uid="uid://dxnyl058sfrac" path="res://Assets/reset_arrow.png" id="8_vnsra"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vegd6"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_ybidx")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = ExtResource("1_8otmk")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 1, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 0, 1, 983040, 0, 1, 1048576, 0, 1, 1114112, 0, 1, 1179648, 0, 1, 1245184, 0, 1, 1, 0, 1, 65537, 0, 1, 131073, 0, 1, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, 720897, 0, 1, 786433, 0, 1, 851969, 0, 1, 917505, 0, 1, 983041, 0, 1, 1048577, 0, 1, 1114113, 0, 1, 1179649, 0, 1, 1245185, 0, 1, 2, 0, 1, 65538, 0, 1, 3, 0, 1, 65539, 0, 1, 4, 0, 1, 65540, 0, 1, 5, 0, 1, 65541, 0, 1, 6, 0, 1, 65542, 0, 1, 7, 0, 1, 65543, 0, 1, 8, 0, 1, 65544, 0, 1, 9, 0, 1, 65545, 0, 1, 10, 0, 1, 65546, 0, 1, 11, 0, 1, 65547, 0, 1, 12, 0, 1, 65548, 0, 1, 13, 0, 1, 65549, 0, 1, 14, 0, 1, 65550, 0, 1, 15, 0, 1, 65551, 0, 1, 16, 0, 1, 65552, 0, 1, 17, 0, 1, 65553, 0, 1, 18, 0, 1, 65554, 0, 1, 19, 0, 1, 65555, 0, 1, 20, 0, 1, 65556, 0, 1, 21, 0, 1, 65557, 0, 1, 22, 0, 1, 65558, 0, 1, 23, 0, 1, 65559, 0, 1, 24, 0, 1, 65560, 0, 1, 25, 0, 1, 65561, 0, 1, 26, 0, 1, 65562, 0, 1, 27, 0, 1, 65563, 0, 1, 28, 0, 1, 65564, 0, 1, 29, 0, 1, 65565, 0, 1, 30, 0, 1, 65566, 0, 1, 31, 0, 1, 65567, 0, 1, 32, 0, 1, 65568, 0, 1, 33, 0, 1, 65569, 0, 1, 34, 0, 1, 65570, 0, 1, 35, 0, 1, 65571, 0, 1, 131106, 0, 1, 196642, 0, 1, 262178, 0, 1, 327714, 0, 1, 393250, 0, 1, 458786, 0, 1, 524322, 0, 1, 589858, 0, 1, 655394, 0, 1, 720930, 0, 1, 786466, 0, 1, 852002, 0, 1, 917538, 0, 1, 983074, 0, 1, 1048610, 0, 1, 1114146, 0, 1, 1179682, 0, 1, 1245218, 0, 1, 1310754, 0, 1, 131107, 0, 1, 196643, 0, 1, 262179, 0, 1, 327715, 0, 1, 393251, 0, 1, 458787, 0, 1, 524323, 0, 1, 589859, 0, 1, 655395, 0, 1, 720931, 0, 1, 786467, 0, 1, 852003, 0, 1, 917539, 0, 1, 983075, 0, 1, 1048611, 0, 1, 1114147, 0, 1, 1179683, 0, 1, 1245219, 0, 1, 1310755, 0, 1, 1310720, 0, 1, 1310721, 0, 1, 1245186, 0, 1, 1310722, 0, 1, 1245187, 0, 1, 1310723, 0, 1, 1245188, 0, 1, 1310724, 0, 1, 1245189, 0, 1, 1310725, 0, 1, 1245190, 0, 1, 1310726, 0, 1, 1245191, 0, 1, 1310727, 0, 1, 1245192, 0, 1, 1310728, 0, 1, 1245193, 0, 1, 1310729, 0, 1, 1245194, 0, 1, 1310730, 0, 1, 1245195, 0, 1, 1310731, 0, 1, 1245196, 0, 1, 1310732, 0, 1, 1245197, 0, 1, 1310733, 0, 1, 1245198, 0, 1, 1310734, 0, 1, 1245199, 0, 1, 1310735, 0, 1, 1245200, 0, 1, 1310736, 0, 1, 1245201, 0, 1, 1310737, 0, 1, 1245202, 0, 1, 1310738, 0, 1, 1245203, 0, 1, 1310739, 0, 1, 1245204, 0, 1, 1310740, 0, 1, 1245205, 0, 1, 1310741, 0, 1, 1245206, 0, 1, 1310742, 0, 1, 1245207, 0, 1, 1310743, 0, 1, 1245208, 0, 1, 1310744, 0, 1, 1245209, 0, 1, 1310745, 0, 1, 1245210, 0, 1, 1310746, 0, 1, 1245211, 0, 1, 1310747, 0, 1, 1245212, 0, 1, 1310748, 0, 1, 1245213, 0, 1, 1310749, 0, 1, 1245214, 0, 1, 1310750, 0, 1, 1245215, 0, 1, 1310751, 0, 1, 1245216, 0, 1, 1310752, 0, 1, 1245217, 0, 1, 1310753, 0, 1, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 1, 1179656, 0, 1, 1179657, 0, 1, 1179658, 0, 1, 1179659, 0, 1, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 1, 1179673, 0, 1, 1179674, 0, 1, 1179675, 0, 1, 1179676, 0, 1, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 851970, 0, 65537, 917506, 0, 65537, 983042, 0, 65537, 1048578, 0, 65537, 1114114, 0, 65537, 851971, 0, 65537, 917507, 0, 65537, 983043, 0, 65537, 1048579, 0, 65537, 1114115, 0, 65537, 851972, 0, 65537, 917508, 0, 65537, 983044, 0, 65537, 1048580, 0, 65537, 1114116, 0, 65537, 851973, 0, 65537, 917509, 0, 65537, 983045, 0, 65537, 1048581, 0, 65537, 1114117, 0, 65537, 851974, 0, 65537, 917510, 0, 65537, 983046, 0, 65537, 1048582, 0, 65537, 1114118, 0, 65537, 851975, 0, 65537, 917511, 0, 65537, 983047, 0, 65537, 1048583, 0, 65537, 851976, 0, 65537, 917512, 0, 65537, 983048, 0, 65537, 1048584, 0, 65537, 851977, 0, 65537, 917513, 0, 65537, 983049, 0, 65537, 1048585, 0, 65537, 851978, 0, 65537, 917514, 0, 65537, 983050, 0, 65537, 1048586, 0, 65537, 851979, 0, 65537, 917515, 0, 65537, 983051, 0, 65537, 1048587, 0, 65537, 851980, 0, 65537, 917516, 0, 65537, 983052, 0, 65537, 1048588, 0, 65537, 851981, 0, 65537, 917517, 0, 65537, 983053, 0, 65537, 1048589, 0, 65537, 851982, 0, 65537, 917518, 0, 65537, 983054, 0, 65537, 1048590, 0, 65537, 851983, 0, 65537, 917519, 0, 65537, 983055, 0, 65537, 1048591, 0, 65537, 851984, 0, 65537, 917520, 0, 65537, 983056, 0, 65537, 1048592, 0, 65537, 851985, 0, 65537, 917521, 0, 65537, 983057, 0, 65537, 1048593, 0, 65537, 851986, 0, 65537, 917522, 0, 65537, 983058, 0, 65537, 1048594, 0, 65537, 851987, 0, 65537, 917523, 0, 65537, 983059, 0, 65537, 1048595, 0, 65537, 851988, 0, 65537, 917524, 0, 65537, 983060, 0, 65537, 1048596, 0, 65537, 851989, 0, 65537, 917525, 0, 65537, 983061, 0, 65537, 1048597, 0, 65537, 851990, 0, 65537, 917526, 0, 65537, 983062, 0, 65537, 1048598, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 851991, 0, 65537, 917527, 0, 65537, 983063, 0, 65537, 851992, 0, 65537, 917528, 0, 65537, 983064, 0, 65537, 851993, 0, 65537, 917529, 0, 65537, 983065, 0, 65537, 851994, 0, 65537, 917530, 0, 65537, 983066, 0, 65537, 851995, 0, 65537, 917531, 0, 65537, 983067, 0, 65537, 851996, 0, 65537, 917532, 0, 65537, 983068, 0, 65537, 851997, 0, 65537, 917533, 0, 65537, 983069, 0, 65537, 1048604, 0, 0, 1114140, 0, 1, 1048605, 0, 65537, 1114141, 0, 65537, 983070, 0, 65537, 1048606, 0, 65537, 1114142, 0, 65537, 983071, 0, 65537, 1048607, 0, 65537, 1114143, 0, 65537, 983072, 0, 65537, 1048608, 0, 65537, 1114144, 0, 65537, 983073, 0, 65537, 1048609, 0, 65537, 1114145, 0, 65537, 131102, 0, 65537, 196638, 0, 65537, 262174, 0, 65537, 327710, 0, 65537, 393246, 0, 65537, 458782, 0, 65537, 524318, 0, 65537, 589854, 0, 65537, 655390, 0, 65537, 720926, 0, 65537, 786462, 0, 0, 851998, 0, 65537, 131103, 0, 65537, 196639, 0, 65537, 262175, 0, 65537, 327711, 0, 65537, 393247, 0, 65537, 458783, 0, 65537, 524319, 0, 65537, 589855, 0, 65537, 655391, 0, 65537, 720927, 0, 65537, 786463, 0, 0, 851999, 0, 65537, 131104, 0, 65537, 196640, 0, 65537, 262176, 0, 65537, 327712, 0, 65537, 393248, 0, 65537, 458784, 0, 65537, 524320, 0, 65537, 589856, 0, 65537, 655392, 0, 65537, 720928, 0, 65537, 786464, 0, 0, 852000, 0, 65537, 131105, 0, 65537, 196641, 0, 65537, 262177, 0, 65537, 327713, 0, 65537, 393249, 0, 65537, 458785, 0, 65537, 524321, 0, 65537, 589857, 0, 65537, 655393, 0, 65537, 720929, 0, 65537, 786465, 0, 0, 852001, 0, 65537, 131074, 0, 65537, 196610, 0, 65537, 262146, 0, 65537, 131075, 0, 65537, 196611, 0, 65537, 262147, 0, 65537, 131076, 0, 65537, 196612, 0, 65537, 131077, 0, 65537, 196613, 0, 65537, 131078, 0, 65537, 196614, 0, 65537, 131079, 0, 65537, 196615, 0, 65537, 131080, 0, 65537, 196616, 0, 65537, 131081, 0, 65537, 196617, 0, 65537, 131082, 0, 65537, 196618, 0, 65537, 262154, 0, 65537, 131083, 0, 65537, 196619, 0, 65537, 262155, 0, 65537, 131084, 0, 65537, 196620, 0, 65537, 262156, 0, 65537, 131085, 0, 65537, 196621, 0, 65537, 262157, 0, 65537, 131086, 0, 65537, 196622, 0, 65537, 262158, 0, 65537, 131087, 0, 65537, 196623, 0, 65537, 262159, 0, 65537, 131088, 0, 65537, 196624, 0, 65537, 262160, 0, 65537, 131089, 0, 65537, 196625, 0, 65537, 262161, 0, 65537, 131090, 0, 65537, 196626, 0, 65537, 262162, 0, 65537, 131091, 0, 65537, 196627, 0, 65537, 262163, 0, 65537, 131092, 0, 65537, 196628, 0, 65537, 262164, 0, 65537, 131093, 0, 65537, 196629, 0, 65537, 262165, 0, 65537, 131094, 0, 65537, 196630, 0, 65537, 262166, 0, 65537, 131095, 0, 65537, 196631, 0, 65537, 262167, 0, 65537, 131096, 0, 65537, 196632, 0, 65537, 262168, 0, 65537, 131097, 0, 65537, 196633, 0, 65537, 262169, 0, 65537, 131098, 0, 65537, 196634, 0, 65537, 262170, 0, 65537, 131099, 0, 65537, 196635, 0, 65537, 262171, 0, 0, 131100, 0, 65537, 196636, 0, 65537, 262172, 0, 0, 131101, 0, 65537, 196637, 0, 65537, 262173, 0, 0, 327682, 0, 65537, 393218, 0, 65537, 458754, 0, 65537, 524290, 0, 65537, 589826, 0, 65537, 655362, 0, 65537, 720898, 0, 65537, 327683, 0, 65537, 393219, 0, 65537, 458755, 0, 65537, 524291, 0, 65537, 589827, 0, 65537, 655363, 0, 65537, 720899, 0, 65537, 458756, 0, 65537, 524292, 0, 65537, 589828, 0, 65537, 655364, 0, 65537, 720900, 0, 65537, 458757, 0, 65537, 524293, 0, 65537, 589829, 0, 65537, 655365, 0, 65537, 720901, 0, 65537, 458758, 0, 65537, 524294, 0, 65537, 589830, 0, 65537, 655366, 0, 65537, 720902, 0, 65537, 458759, 0, 65537, 524295, 0, 65537, 589831, 0, 65537, 655367, 0, 65537, 720903, 0, 65537, 458760, 0, 65537, 524296, 0, 65537, 589832, 0, 65537, 655368, 0, 65537, 720904, 0, 65537, 458761, 0, 65537, 524297, 0, 65537, 589833, 0, 65537, 655369, 0, 65537, 720905, 0, 65537, 458762, 0, 65537, 524298, 0, 65537, 589834, 0, 65537, 655370, 0, 65537, 720906, 0, 65537, 458763, 0, 65537, 524299, 0, 65537, 589835, 0, 65537, 655371, 0, 65537, 720907, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 327690, 0, 65537, 393226, 0, 65537, 327691, 0, 65537, 393227, 0, 65537, 327684, 0, 0, 327685, 0, 0, 327692, 0, 65537, 393228, 0, 65537, 458764, 0, 65537, 524300, 0, 65537, 327693, 0, 65537, 393229, 0, 65537, 458765, 0, 65537, 524301, 0, 65537, 327694, 0, 65537, 393230, 0, 65537, 458766, 0, 65537, 524302, 0, 65537, 327695, 0, 65537, 393231, 0, 65537, 458767, 0, 65537, 524303, 0, 65537, 327696, 0, 65537, 393232, 0, 65537, 458768, 0, 65537, 524304, 0, 65537, 327697, 0, 65537, 393233, 0, 65537, 458769, 0, 65537, 524305, 0, 65537, 327698, 0, 65537, 393234, 0, 65537, 458770, 0, 65537, 524306, 0, 65537, 327699, 0, 65537, 393235, 0, 65537, 458771, 0, 65537, 524307, 0, 65537, 327700, 0, 65537, 393236, 0, 65537, 458772, 0, 65537, 524308, 0, 65537, 327701, 0, 65537, 393237, 0, 65537, 458773, 0, 65537, 524309, 0, 65537, 327702, 0, 65537, 393238, 0, 65537, 458774, 0, 65537, 524310, 0, 65537, 327703, 0, 65537, 393239, 0, 65537, 458775, 0, 65537, 524311, 0, 65537, 327704, 0, 65537, 393240, 0, 65537, 458776, 0, 65537, 524312, 0, 65537, 327705, 0, 65537, 393241, 0, 65537, 458777, 0, 65537, 524313, 0, 65537, 393242, 0, 65537, 458778, 0, 65537, 524314, 0, 65537, 393243, 0, 65537, 458779, 0, 65537, 524315, 0, 65537, 393244, 0, 65537, 458780, 0, 65537, 524316, 0, 65537, 393245, 0, 65537, 458781, 0, 65537, 524317, 0, 65537, 589848, 0, 0, 655384, 0, 65537, 720920, 0, 65537, 786456, 0, 65537, 589849, 0, 0, 655385, 0, 65537, 720921, 0, 65537, 786457, 0, 65537, 589850, 0, 65537, 655386, 0, 65537, 720922, 0, 65537, 786458, 0, 65537, 589851, 0, 65537, 655387, 0, 65537, 720923, 0, 65537, 786459, 0, 65537, 589852, 0, 65537, 655388, 0, 65537, 720924, 0, 65537, 786460, 0, 65537, 589853, 0, 65537, 655389, 0, 65537, 720925, 0, 65537, 786461, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 655372, 0, 65537, 720908, 0, 65537, 786444, 0, 65537, 655373, 0, 65537, 720909, 0, 65537, 786445, 0, 65537, 655374, 0, 65537, 720910, 0, 65537, 786446, 0, 65537, 655375, 0, 65537, 720911, 0, 65537, 786447, 0, 65537, 655376, 0, 65537, 720912, 0, 65537, 786448, 0, 65537, 655377, 0, 65537, 720913, 0, 65537, 786449, 0, 65537, 655378, 0, 65537, 720914, 0, 65537, 786450, 0, 65537, 655379, 0, 65537, 720915, 0, 65537, 786451, 0, 65537, 655380, 0, 65537, 720916, 0, 65537, 786452, 0, 65537, 655381, 0, 65537, 720917, 0, 65537, 786453, 0, 65537, 655382, 0, 65537, 720918, 0, 65537, 786454, 0, 65537, 655383, 0, 65537, 720919, 0, 65537, 786455, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 327686, 0, 0, 327687, 0, 0, 327689, 0, 65537, 327688, 0, 65537, 262151, 0, 65537, 262150, 0, 65537, 262149, 0, 65537, 262148, 0, 65537, 1048600, 0, 0, 1114136, 0, 1, 1048601, 0, 0, 1114137, 0, 1, 1048602, 0, 0, 1114138, 0, 1, 1048603, 0, 0, 1114139, 0, 1, 1048599, 0, 65537, 1114135, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 917534, 0, 65537, 917535, 0, 65537, 917536, 0, 65537, 917537, 0, 65537, 36, 0, 1, 65572, 0, 1, 131108, 0, 1, 196644, 0, 1, 262180, 0, 1, 327716, 0, 1, 393252, 0, 1, 458788, 0, 1, 524324, 0, 1, 589860, 0, 1, 655396, 0, 1, 720932, 0, 1, 786468, 0, 1, 852004, 0, 1, 917540, 0, 1, 983076, 0, 1, 1048612, 0, 1, 1114148, 0, 1, 1179684, 0, 1, 1245220, 0, 1, 1310756, 0, 1, 37, 0, 1, 65573, 0, 1, 131109, 0, 1, 196645, 0, 1, 262181, 0, 1, 327717, 0, 1, 393253, 0, 1, 458789, 0, 1, 524325, 0, 1, 589861, 0, 1, 655397, 0, 1, 720933, 0, 1, 786469, 0, 1, 852005, 0, 1, 917541, 0, 1, 983077, 0, 1, 1048613, 0, 1, 1114149, 0, 1, 1179685, 0, 1, 1245221, 0, 1, 1310757, 0, 1, 38, 0, 1, 65574, 0, 1, 131110, 0, 1, 196646, 0, 1, 262182, 0, 1, 327718, 0, 1, 393254, 0, 1, 458790, 0, 1, 524326, 0, 1, 589862, 0, 1, 655398, 0, 1, 720934, 0, 1, 786470, 0, 1, 852006, 0, 1, 917542, 0, 1, 983078, 0, 1, 1048614, 0, 1, 1114150, 0, 1, 1179686, 0, 1, 1245222, 0, 1, 1310758, 0, 1, 39, 0, 1, 65575, 0, 1, 131111, 0, 1, 196647, 0, 1, 262183, 0, 1, 327719, 0, 1, 393255, 0, 1, 458791, 0, 1, 524327, 0, 1, 589863, 0, 1, 655399, 0, 1, 720935, 0, 1, 786471, 0, 1, 852007, 0, 1, 983079, 0, 1, 1048615, 0, 1, 1114151, 0, 1, 1179687, 0, 1, 1245223, 0, 1, 1310759, 0, 1, 917543, 0, 1, 1376256, 0, 1, 1441792, 0, 1, 1376257, 0, 1, 1441793, 0, 1, 1376258, 0, 1, 1441794, 0, 1, 1376259, 0, 1, 1441795, 0, 1, 1376260, 0, 1, 1441796, 0, 1, 1376261, 0, 1, 1441797, 0, 1, 1376262, 0, 1, 1441798, 0, 1, 1376263, 0, 1, 1441799, 0, 1, 1376264, 0, 1, 1441800, 0, 1, 1376265, 0, 1, 1441801, 0, 1, 1376266, 0, 1, 1441802, 0, 1, 1376267, 0, 1, 1441803, 0, 1, 1376268, 0, 1, 1441804, 0, 1, 1376269, 0, 1, 1441805, 0, 1, 1376270, 0, 1, 1441806, 0, 1, 1376271, 0, 1, 1441807, 0, 1, 1376272, 0, 1, 1441808, 0, 1, 1376273, 0, 1, 1441809, 0, 1, 1376274, 0, 1, 1441810, 0, 1, 1376275, 0, 1, 1441811, 0, 1, 1376276, 0, 1, 1441812, 0, 1, 1376277, 0, 1, 1441813, 0, 1, 1376278, 0, 1, 1441814, 0, 1, 1376279, 0, 1, 1441815, 0, 1, 1376280, 0, 1, 1441816, 0, 1, 1376281, 0, 1, 1441817, 0, 1, 1376282, 0, 1, 1441818, 0, 1, 1376283, 0, 1, 1441819, 0, 1, 1376284, 0, 1, 1441820, 0, 1, 1376285, 0, 1, 1441821, 0, 1, 1376286, 0, 1, 1441822, 0, 1, 1376287, 0, 1, 1441823, 0, 1, 1376288, 0, 1, 1441824, 0, 1, 1376289, 0, 1, 1441825, 0, 1, 1376290, 0, 1, 1441826, 0, 1, 1376291, 0, 1, 1441827, 0, 1, 1376292, 0, 1, 1441828, 0, 1, 1376293, 0, 1, 1441829, 0, 1, 1376294, 0, 1, 1441830, 0, 1, 1376295, 0, 1, 1441831, 0, 1)

[node name="Play" parent="." instance=ExtResource("2_yo36c")]
position = Vector2(572, 113)
scale = Vector2(3, 3)

[node name="Quit" parent="." instance=ExtResource("2_yo36c")]
position = Vector2(572, 369)
scale = Vector2(3, 3)
text_frame = 1

[node name="Player" parent="." instance=ExtResource("3_f42q3")]
position = Vector2(302, 447)
scale = Vector2(7.2, 7.2)
init_jump = 250
init_gravity = 12
camera_active = false

[node name="Flag" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(889, 480)
scale = Vector2(4, 4)
texture = ExtResource("5_dyqpo")

[node name="Torch" parent="." instance=ExtResource("6_4kadi")]
position = Vector2(664, 492)
scale = Vector2(3, 3)
max_scale = 7.0
min_scale = 4.0

[node name="Torch2" parent="." instance=ExtResource("6_4kadi")]
position = Vector2(223, 307)
scale = Vector2(3, 3)
max_scale = 7.0
min_scale = 4.0

[node name="Torch3" parent="." instance=ExtResource("6_4kadi")]
position = Vector2(953, 297)
scale = Vector2(3, 3)
max_scale = 7.0
min_scale = 4.0

[node name="Text box" parent="." instance=ExtResource("7_5jsix")]
position = Vector2(745, 369)
scale = Vector2(3, 3)
dialog = ["Move using WAD\\or arrows", "Touch the buttons\\to press them"]

[node name="Button" type="Button" parent="."]
offset_left = 1102.0
offset_top = 7.0
offset_right = 1162.0
offset_bottom = 67.0
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_vegd6")
flat = true

[node name="ResetArrow" type="Sprite2D" parent="Button"]
z_index = 1
texture_filter = 1
position = Vector2(32, 33)
scale = Vector2(4, 4)
texture = ExtResource("8_vnsra")

[connection signal="body_entered" from="Play" to="." method="_on_play_body_entered"]
[connection signal="body_entered" from="Quit" to="." method="_on_quit_body_entered"]
[connection signal="pressed" from="Button" to="." method="_reset_game"]
